<resources>
    <string name="app_name">AnimaisFelizes</string>
    <string name="animal_name_hint">Nome do animal</string>
    <string name="idade_name_hint">Idade do animal</string>
    <string name="cadastro_button">Adicionar</string>
    <string name="editar_button">Salvar</string>
    <string name="title">Animais Felizes</string>
    <string name="title_edicao">Animais Felizes - Informações</string>
    <string name="proprietario_name_hint">Proprietário</string>
    <string name="animal_inserido_sucesso">Animal foi inserido com sucesso</string>
    <string name="animal_inserido_erro">Animal não inserido, aconteceu algum erro</string>
    <string name="todo">TODO</string>
    <string name="animal_atualizado_sucesso">Animal foi atualizado com sucesso</string>
    <string name="animal_atualizado_erro">Animal não atualizado, aconteceu algum erro</string>
    <string name="excluir_button">Deletar</string>
    <string name="animal_excluido_sucesso">Animal excluído com sucesso</string>
    <string name="animal_excluido_erro">Erro ao excluir animal.</string>
    <string name="vacina_button">Vacinas</string>
    <string name="cadastro_vacina">Atualizar</string>
    <string name="vacina_atualizado_sucesso">Vacinas atualizadas com sucesso</string>
    <string name="vacina_atualizado_erro">Erro ao atualizar vacinas</string>
    <string name="vacinas_fragment">Animais Felizes - Vacinas</string>
</resources>