<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/animaisListFragment">

    <fragment
        android:id="@+id/animaisListFragment"
        android:name="com.example.animaisfelizes.ui.animaislist.AnimaisListFragment"
        android:label="@string/title"
        tools:layout="@layout/animais_list_fragment" >
        <action
            android:id="@+id/action_animaisListFragment_to_animaisFragment"
            app:destination="@id/animaisFragment" />
    </fragment>

    <fragment
        android:id="@+id/animaisFragment"
        android:name="com.example.animaisfelizes.ui.animais.AnimaisFragment"
        android:label="@string/title_edicao"
        tools:layout="@layout/animais_fragment" >
        <argument
            android:name="animal"
            app:argType="com.example.animaisfelizes.data.db.entity.AnimalEntity"
            android:defaultValue="@null"
            app:nullable="true" />
        <action
            android:id="@+id/action_animaisFragment_to_vacinasFragment"
            app:destination="@id/vacinasFragment" />
    </fragment>
    <fragment
        android:id="@+id/vacinasFragment"
        android:name="com.example.animaisfelizes.ui.vacinas.VacinasFragment"
        android:label="@string/vacinas_fragment"
        tools:layout="@layout/vacinas_fragment" />

</navigation>